--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyCeleb"
         tools:targetApi="31">
         <activity
+            android:name=".audio.AudioActivity"
+            android:exported="false" />
+        <activity
             android:name=".community.CommunityActivity"
             android:exported="false" />
         <activity
