--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     defaultConfig {
         applicationId "com.devjeong.myapplication"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -64,4 +64,11 @@ dependencies {
     //glide
     def glide_version = "4.15.1"
     implementation "com.github.bumptech.glide:glide:$glide_version"
+
+    //exoPlayer
+    def exoPlayer_version = "2.19.1"
+    implementation "com.google.android.exoplayer:exoplayer:$exoPlayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoPlayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-dash:$exoPlayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$exoPlayer_version"
 }
