--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,8 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-core:$exoPlayer_version"
     implementation "com.google.android.exoplayer:exoplayer-dash:$exoPlayer_version"
     implementation "com.google.android.exoplayer:exoplayer-ui:$exoPlayer_version"
+
+    //dataStore
+    def dataStore_version = "1.0.0"
+    implementation "androidx.datastore:datastore-preferences:$dataStore_version"
 }
