--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'kotlin-kapt'
 }
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     namespace 'com.devjeong.myapplication'
     compileSdk 34
@@ -16,6 +19,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "NAVER_CLOVA_VOICE_ID", properties['NAVER_CLOVA_VOICE_ID']
+        buildConfigField "String", "NAVER_CLOVA_VOICE_API", properties['NAVER_CLOVA_VOICE_API']
+        buildConfigField "String", "AUDIO_BOOK_API", properties['AUDIO_BOOK_API']
     }
 
     dataBinding {
@@ -37,6 +44,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        buildConfig = true
     }
 }
 
@@ -75,4 +83,11 @@ dependencies {
     //dataStore
     def dataStore_version = "1.0.0"
     implementation "androidx.datastore:datastore-preferences:$dataStore_version"
+
+    //retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation "com.squareup.retrofit2:converter-scalars:2.1.0"
 }
