--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.devjeong.myapplication"
-        minSdk 24
+        minSdk 26
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -73,12 +73,11 @@ dependencies {
     def glide_version = "4.15.1"
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
-    //exoPlayer
-    def exoPlayer_version = "2.19.1"
-    implementation "com.google.android.exoplayer:exoplayer:$exoPlayer_version"
-    implementation "com.google.android.exoplayer:exoplayer-core:$exoPlayer_version"
-    implementation "com.google.android.exoplayer:exoplayer-dash:$exoPlayer_version"
-    implementation "com.google.android.exoplayer:exoplayer-ui:$exoPlayer_version"
+    def ExoPlayer = "2.18.6"
+    implementation "com.google.android.exoplayer:exoplayer:$ExoPlayer"
+    implementation "com.google.android.exoplayer:exoplayer-core:$ExoPlayer"
+    implementation "com.google.android.exoplayer:exoplayer-dash:$ExoPlayer"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$ExoPlayer"
 
     //dataStore
     def dataStore_version = "1.0.0"
