--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
         buildConfigField "String", "NAVER_CLOVA_VOICE_ID", properties['NAVER_CLOVA_VOICE_ID']
         buildConfigField "String", "NAVER_CLOVA_VOICE_API", properties['NAVER_CLOVA_VOICE_API']
         buildConfigField "String", "AUDIO_BOOK_API", properties['AUDIO_BOOK_API']
+        buildConfigField "String", "CHATBOT_API", properties['CHATBOT_API']
     }
 
     dataBinding {
