--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         tools:targetApi="31">
         <activity
             android:name=".audio.AudioActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".community.CommunityActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +27,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".community.CommunityActivity"
-            android:exported="false" />
         <activity
             android:name=".tutorial.TutorialActivity"
             android:exported="false" />
