--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation "com.squareup.retrofit2:converter-scalars:2.1.0"
 
+    //paging3
+    def paging_version = "3.1.1"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
 }
